Fixed pagination to be centered by adding .center-align class once dom is loaded

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -264,7 +264,6 @@ textarea.materialize-textarea {
 .pagination-page-info {
     padding: .6em;
     padding-left: 0;
-    width: 40em;
     margin: .5em;
     margin-left: 0;
     font-size: 18px;
